image of unimag agg

--- a/index.html
+++ b/index.html
@@ -78,8 +78,15 @@
   </head>
   <body>
     <header>
-      <h2>LABS</h2>
-      <h2 style="font-size: 15px;">Dev:Jose Granados</h2>
+      <div 
+      style="display: grid; align-items: center;"
+      >
+        <h2>LABS</h2>
+        <h2 style="font-size: 15px;">Dev:Jose Granados</h2>
+      </div>
+      <div>
+        <img src="https://upload.wikimedia.org/wikipedia/commons/b/b0/Escudo_unimag_sm.png" width="50px" height="50px"  alt="">
+      </div>
     </header>
     <div class="container">
       <div  id="boxing" class="box">
